# ppseq-pytorch

./: MANIFEST.in  README.md  setup.cfg  setup.py
PPSeq/notebooks/: version2.ipynb
notebooks/: demo.ipynb  derivations.md  generate_data.py  songbird_demo.ipynb  version1.ipynb  version2.ipynb  version3.ipynb  version4.ipynb  xie_2024_demo.ipynb
ppseq/: batch_model.py  em.py  model.py  model_b1.py  model_check.py  model_old.py  plotting.py
src/: electrophysiology_data.txt  em.py  em_old.py  em_v2.py  generate_data.py  plot_tools.py
