[metadata]
url = https://github.com/probml/dynamax
author = Hongyue Li and Scott Linderman
description = A PyTorch implementation of PPSeq
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python

[versioneer]
VCS = git
style = pep440
versionfile_source = ppseq/_version.py
versionfile_build = ppseq/_version.py
tag_prefix =
parentdir_prefix =

[options]
python_requires = >= 3.10
install_requires =
    fastprogress
    jaxtyping
    matplotlib
    numpy
    pandas
    scipy
    torch
    
packages = find:
